--- a/package.json
+++ b/package.json
@@ -1,19 +1,20 @@
 {
-  "name": "colorconverter",
+  "name": "colorconverter-z2m",
   "version": "1.0.0",
-  "description": "\u0016Color Converter for RGB <-> HEX color values",
+  "description": "A Color Converter for RGB <-> HEX color values",
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/christinetrant/ColorConverter.git"
-  },
+  "keywords": [
+    "node",
+    "npm",
+    "rgb",
+    "hex",
+    "converter",
+    "color"
+  ],
   "author": "Christine Trant",
   "license": "ISC",
-  "bugs": {
-    "url": "https://github.com/christinetrant/ColorConverter/issues"
-  },
-  "homepage": "https://github.com/christinetrant/ColorConverter#readme"
+  "homepage": "https://github.com/christinetrant/ColorConverter.git"
 }
